2022-04-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed image path for exporting GCstar files (Bug 453075).

2022-04-08  Robby Stephenson  <robby@periapsis.org>

	* Updated CSV importer to remember column and row delimiter.

2022-03-26  Robby Stephenson  <robby@periapsis.org>

	* Added screenshot field for IGDB source.

2022-03-23  Robby Stephenson  <robby@periapsis.org>

	* Added screenshot field for MobyGames source.

2022-03-22  Robby Stephenson  <robby@periapsis.org>

	* Added screenshot field for TheGamesDB source.

2022-03-15  Robby Stephenson  <robby@periapsis.org>

	* Added option for using regular expressions in quick filter (Bug 450517).

2022-03-13  Robby Stephenson  <robby@periapsis.org>

	* Added data source for arcade-history.com (Bug 450058).

2022-03-10  Robby Stephenson  <robby@periapsis.org>

	* Added Data Crow importer (Bug 451138).

2022-02-21  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb data source to include composer (Bug 450618).

2022-02-16  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.4.

2022-02-14  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with taskbar icon on wayland (Bug 450180).
	* Updated Discogs keyword search to limit results to releases.

2022-02-13  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with saving and viewing surrogate code points (Bug 449244).

2022-02-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with fetchdialog layout preventing clicking (Bug 449636).

2022-01-02  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.3.

2021-12-31  Robby Stephenson  <robby@periapsis.org>

	* Updated kinopoisk.ru data source (Bug 447435).

2021-12-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with opening target=_blank links (Bug 445871).

2021-12-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug in audio file importer (Bug 446551).

2021-12-06  Robby Stephenson  <robby@periapsis.org>
